# backtracer

./: .editorconfig  .gitignore  Cargo.toml  README.md  Rocket.toml.example  diesel.toml  stack.yml
Backtracer.Api/: Backtracer.Api.csproj  Program.cs
Backtracer.Api/Attributes/: ApiKeyAttribute.cs
Backtracer.Api/ClientApp/: .gitignore  index.html  oas.json  package.json  pnpm-lock.yaml  svelte.config.js
Backtracer.Api/Controllers/: ConstantsController.cs  LapsController.cs
Backtracer.Api/Extensions/: DependencyInjection.cs  Swagger.cs
Backtracer.Api/Properties/: launchSettings.json
Backtracer.Api/Resources/: ConstantResources.cs
Backtracer.Application/: Backtracer.Application.csproj  Class1.cs
Backtracer.Application.Test/: Backtracer.Application.Test.csproj  ConstantsServiceTest.cs  ServiceTest.cs  UnitTest1.cs
Backtracer.Application/Exceptions/: ConstantsServiceException.cs
Backtracer.Application/Model/: ConstantGroup.cs  Constants.cs
Backtracer.Application/Services/: ConstantsService.cs
Backtracer.Persistence/: Backtracer.Persistence.csproj  DataContext.cs
Backtracer.Persistence/Migrations/: 20211115054337_Initial.Designer.cs  20211115054337_Initial.cs  20211120014326_Initial.Designer.cs  20211120014326_Initial.cs  DataContextModelSnapshot.cs
Backtracer.Persistence/Model/: ConstantEntity.cs  ConstantGroupEntity.cs  ConstantTypeEntity.cs
migrations/2021-06-10-192613_create_tables/: down.sql  up.sql
migrations/2021-09-15-200941_create_lap_table/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  schema.rs
src/db/: constants.rs  laps.rs  (+1 more)
(+26 files in other folders)
