[package]
name = "backtracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_okapi = "0.7.0-alpha-1"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
okapi = { version = "0.6.0-alpha.1", features = ["derive_json_schema"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
